cabal-version:      2.2
name:               hesp
version:            0.1.0.0
synopsis:           Network protocol for HStream.
description:        Please see the README on Github at
                    <https://github.com/hstream-io/hesp#readme>
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             mu
maintainer:         lambda@emqx.io
tested-with:        GHC == 8.8.1, GHC == 8.6.5
category:           Network
homepage:           https://github.com/hstream-io/hesp#readme
bug-reports:        https://github.com/hstream-io/hesp/issues
build-type:         Simple
extra-source-files: README.md
                    ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/hstream-io/hesp

library
  hs-source-dirs:   src
  build-depends:    base >= 4.11 && < 5
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite hesp-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base >= 4.11 && < 5, hesp, hspec
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                      -threaded -rtsopts -with-rtsopts=-N
