cabal-version:      2.2
name:               hesp
version:            0.1.0.0
synopsis:           Network protocol for HStream.
description:        Please see the README on Github at
                    <https://github.com/hstream-io/hesp#readme>
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             mu
maintainer:         lambda@emqx.io
tested-with:        GHC == 8.8.1, GHC == 8.6.5
category:           Network
homepage:           https://github.com/hstream-io/hesp
bug-reports:        https://github.com/hstream-io/hesp/issues
build-type:         Simple
extra-source-files: README.md
                    ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/hstream-io/hesp

library
  exposed-modules:  Network.HESP
                    Network.HESP.Commands
  other-modules:    Network.HESP.Protocol
                    Network.HESP.TCP
                    Network.HESP.Types
  hs-source-dirs:   src
  build-depends:    base           >= 4.11 && < 5
                  , bytestring     ^>= 0.10
                  , containers     ^>= 0.6
                  , deepseq        ^>= 1.4
                  , network        >= 2.8 && < 3.2
                  , network-simple ^>= 0.4
                  , resource-pool  ^>= 0.2
                  , scanner        ^>= 0.3
                  , text           ^>= 1.2
                  , time           >= 1.8 && < 2
                  , vector         ^>= 0.12
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite hesp-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Test.ProtocolSpec
  hs-source-dirs:     test
  build-depends:      base >= 4.11 && < 5, bytestring ^>= 0.10, hesp, hspec, text ^>= 1.2
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                      -threaded -rtsopts -with-rtsopts=-N
